@@ -8,6 +8,7 @@
 * enhancements
 
   * allow registering example groups with a path-like key (Pat Maddox)
+  * start DRb service at "druby://localhost:0" (Hongli Lai) - See http://redmine.ruby-lang.org/issues/show/496 
   
 * bug fixes
 
